--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://lonestargeneralremodeling.github.io/web",
+  "homepage": "https://lonestargr.github.io/web",
   "dependencies": {
     "@ant-design/icons": "latest",
     "@testing-library/jest-dom": "^5.16.5",
