--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "homepage": "https://lonestargr.github.io/web",
   "dependencies": {
     "@ant-design/icons": "latest",
+    "@emotion/react": "^11.10.5",
+    "@mantine/carousel": "^5.10.2",
+    "@mantine/core": "^5.10.2",
+    "@mantine/hooks": "^5.10.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,6 +16,7 @@
     "@types/react-dom": "^18.0.0",
     "antd": "5.0.4",
     "axios": "^1.2.2",
+    "embla-carousel-react": "^7.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.5",
