--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "embla-carousel-react": "^7.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
