--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "sitemap": "^7.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
