--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "latest",
-    "@emotion/react": "^11.10.5",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@mantine/carousel": "^5.10.2",
     "@mantine/core": "^5.10.2",
     "@mantine/hooks": "^5.10.2",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/material": "^5.15.20",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -20,8 +24,10 @@
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
     "react-helmet-async": "^1.3.0",
+    "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "react-stacked-center-carousel": "^1.0.14",
     "sitemap": "^7.1.1",
     "web-vitals": "^2.1.4"
   },
