--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "antd": "5.0.4",
     "axios": "^1.2.2",
     "embla-carousel-react": "^7.0.9",
+    "framer-motion": "^11.2.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
